<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_header" />

        <LinearLayout
            android:id="@+id/layout_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="16dp"
                android:text="@string/intro_welcome"
                android:textAppearance="@style/AppIntroDefaultHeading"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_provisioning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/intro_description"
                android:scrollbars="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_provisioning_somethingWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5c7a6d"
                android:padding="16dp"
                android:text="@string/intro_somethingWrong_title"
                android:textAppearance="@style/AppIntroDefaultHeading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/intro_somethingWrong_message" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_provisioning_alreadyProvisioned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5c7a6d"
                android:padding="16dp"
                android:text="@string/intro_alreadyProvisioned_title"
                android:textAppearance="@style/AppIntroDefaultHeading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/intro_alreadyProvisioned_message" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_provisioning_uninstall"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_alreadyProvisioned_uninstall"
                app:icon="@drawable/baseline_delete_24"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_provisioning_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_navigate_next_24"
        android:contentDescription="@null"
        android:tint="@android:color/white"
        android:backgroundTint="@color/colorPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>