<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_home_lock"
            android:contentDescription="@null"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_round"
            android:gravity="center"
            android:padding="24dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_lock_24"
            app:tint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/home_lock"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
        android:id="@+id/cardView_home_password"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_password_required"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_home_setPassword"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#888888"
                android:text="@string/home_password_set"
                app:icon="@drawable/baseline_lock_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

